# Toaster-2.0

./: .gitignore  CMakeLists.txt
cmake/platform/: platform_win32.cmake
cmake/utils/: ToasterCompilerSettings.cmake  ToasterDependencies.cmake  ToasterInstall.cmake  (+1 more)
engine/: CMakeLists.txt
engine/core/: CMakeLists.txt  core.hpp  core_api.hpp  core_defines.hpp  core_typedefs.hpp  error.hpp  error_macros.hpp
engine/core/events/: event.hpp  key_event.hpp  mouse_event.hpp
engine/core/io/: serializable.hpp  stream_reader.hpp  stream_writer.hpp
engine/core/logging/: log.cpp  log.hpp
engine/core/math/: math_constants.hpp  math_funcs.cpp  math_funcs.hpp  math_types.hpp  rect.cpp  rect.hpp  vector.hpp  vector2.cpp  vector2.hpp  vector2i.cpp  vector2i.hpp  vector3.cpp  vector3.hpp  vector3i.cpp  vector3i.hpp  vector4.cpp  vector4.hpp  vector4i.cpp  vector4i.hpp
engine/core/memory/: allocator.hpp  buffer.hpp  ref_ptr.cpp  ref_ptr.hpp  unique_ptr.hpp
engine/core/misc/: key_codes.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp
engine/core/string/: string.hpp
engine/core/threading/: thread.cpp  thread.hpp
engine/gpu/: CMakeLists.txt  command_buffer.cpp  command_buffer.hpp  device.hpp  device_manager.cpp  device_manager.hpp  framebuffer.hpp  gpu_api.hpp  index_buffer.cpp  index_buffer.hpp  pipeline.hpp  pipeline_spec_info.hpp  rendering_context.cpp  rendering_context.hpp  shader.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
engine/gpu/opengl/: opengl_render_api.hpp
engine/gpu/vulkan/: vulkan_device_manager.cpp  vulkan_device_manager.hpp  vulkan_render_api.hpp  vulkan_rendering_context.cpp  vulkan_rendering_context.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
engine/main/: CMakeLists.txt  main.cpp  main.hpp
engine/platform/: CMakeLists.txt  application.cpp  application.hpp  input.hpp  os.cpp  os.hpp  platform_api.hpp  render_thread.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp
engine/platform/windows/: windows_main.cpp  windows_os.hpp  windows_platform.hpp  windows_render_thread.cpp  windows_window_manager.cpp  windows_window_manager.hpp
engine/renderer/: CMakeLists.txt  render_command_queue.cpp  render_command_queue.hpp  renderer.cpp  renderer.hpp  renderer_config_info.hpp
source/: CMakeLists.txt
source/launcher/: CMakeLists.txt  main.cpp
source/toaster/gpu/: CMakeLists.txt  framebuffer.cpp  framebuffer.hpp  gpu_context.cpp  gpu_context.hpp  image.hpp  index_buffer.cpp  index_buffer.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  shader_common.hpp  shader_compiler.cpp  shader_compiler.hpp  shader_reflection.cpp  shader_reflection.hpp  swapchain.cpp  swapchain.hpp  texture.cpp  texture.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
source/toaster/toast_kernel/: CMakeLists.txt  application.cpp  application.hpp  camera.cpp  camera.hpp  input.cpp  input.hpp  mesh.cpp  mesh.hpp  window.cpp  window.hpp
source/toaster/toast_lib/: CMakeLists.txt  logging.cpp  logging.hpp  system_types.h  toast_assert.cpp  toast_assert.h  toast_exception.cpp  toast_exception.hpp  util_defines.hpp
source/toaster/toast_lib/io/: file_stream.cpp  file_stream.hpp  filesystem.cpp  filesystem.hpp  serializable.hpp  stream_reader.hpp  stream_writer.hpp
source/toaster/toast_lib/math/: math_constants.hpp  math_vector.cpp  math_vector.hpp
source/toaster/toast_shaders/: CMakeLists.txt  mandlebrot.pixel.glsl  mesh.pixel.glsl  mesh.vert.glsl  planet.pixel.glsl  test.pixel.glsl  test.vert.glsl
tests/: CMakeLists.txt
toaster/: CMakeLists.txt
toaster/asset/: CMakeLists.txt  texture_importer.cpp  texture_importer.hpp
toaster/core/: CMakeLists.txt  allocator.hpp  buffer.hpp  core.hpp  core_api.hpp  core_typedefs.hpp  error.hpp  hash.hpp  layer.hpp  layer_stack.cpp  layer_stack.hpp  log.cpp  log.hpp  ref_ptr.cpp  ref_ptr.hpp  serialization_macros.hpp  string_utils.hpp  thread.cpp  thread.hpp  unique_ptr.hpp
toaster/core/events/: event.hpp  key_event.hpp  mouse_event.hpp  window_event.hpp
toaster/core/filesystem/: filesystem.cpp  filesystem.hpp
toaster/core/io/: file_stream_reader.hpp  file_stream_writer.hpp  stream_reader.cpp  stream_reader.hpp  stream_writer.cpp  stream_writer.hpp
toaster/core/math/: math_constants.hpp  math_funcs.hpp  matrix.cpp  matrix.hpp  vector.hpp
toaster/gpu/: CMakeLists.txt  command_buffer.cpp  command_buffer.hpp  compute_pass.cpp  compute_pass.hpp  compute_pipeline.cpp  compute_pipeline.hpp  device.hpp  device_manager.cpp  device_manager.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  index_buffer.cpp  index_buffer.hpp  material.cpp  material.hpp  pipeline.cpp  pipeline.hpp  pipeline_spec_info.hpp  render_pass.cpp  render_pass.hpp  render_resource.hpp  shader.cpp  shader.hpp  storage_buffer.cpp  storage_buffer.hpp  storage_buffer_set.cpp  storage_buffer_set.hpp  texture.cpp  texture.hpp  uniform_buffer.cpp  uniform_buffer.hpp  uniform_buffer_set.cpp  uniform_buffer_set.hpp  vertex_buffer.cpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
toaster/gpu/vulkan/: descriptor_set_manager.cpp  descriptor_set_manager.hpp  vulkan_device_manager.cpp  vulkan_device_manager.hpp  vulkan_shader.cpp  vulkan_shader.hpp  vulkan_shader_utils.hpp  vulkan_swapchain.cpp  vulkan_swapchain.hpp
toaster/gpu/vulkan/shader_compiler/: vulkan_shader_cache.cpp  vulkan_shader_cache.hpp  vulkan_shader_compiler.cpp  vulkan_shader_compiler.hpp
toaster/gpu/vulkan/shader_compiler/shader_preprocessing/: glsl_includer.cpp  glsl_includer.hpp  hlsl_includer.cpp  hlsl_includer.hpp  shader_preprocessor.hpp
toaster/platform/: application.cpp  application.hpp  input.cpp  input.hpp  os.hpp  render_thread.hpp  window.cpp  window.hpp
toaster/platform/windows/: windows_main.cpp  windows_os.cpp  windows_os.hpp
toaster/renderer/: CMakeLists.txt  render_command_queue.cpp  renderer.cpp  renderer.hpp  renderer_2d.cpp  renderer_2d.hpp
toaster/ui/: CMakeLists.txt  imgui_fonts.cpp  imgui_fonts.hpp  imgui_layer.cpp  imgui_layer.hpp  imgui_renderer.cpp  imgui_renderer.hpp  ui_core.cpp  ui_core.hpp
(+19 files in other folders)
